fix link to JavaScript program

--- a/js/index.html
+++ b/js/index.html
@@ -15,7 +15,7 @@
     }
   </style>
   <script type="text/javascript" src="jquery-2.1.1.js"></script>
-  <script type="text/javascript" src="jsRVM.js"></script>
+  <script type="text/javascript" src="kevm.js"></script>
   <script type="text/javascript">
     var theVM;
     $(function () {
